@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_EXEEXT
 
 PACKAGE=mbuffer
-VERSION=20081207
+VERSION=20090106
 
 if test "${LD_LIBRARY_PATH}" != "" ; then
 	echo ""
